# agentic_job_search

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  creds.yaml.example  pyproject.toml
.github/: FUNDING.yml
src/: config.py  llms.py  scrape.py  utils.py
src/agentic_job_search/: __init__.py  crew.py  main.py
src/agentic_job_search/config/: agents.yaml  orgs.yaml  tasks.yaml
src/agentic_job_search/tools/: custom_tool.py
src/programmatic_job_search/: OllamaModelFile  main.py
src/scrape/: orgs.yaml  orgs.yaml.example  scrape.py
